adding make coq

--- a/codeTest/Makefile
+++ b/codeTest/Makefile
@@ -1,5 +1,10 @@
 CC=gcc
 OFLAGS=-Os
+CLIGHTGEN=clightgen
+
 
 test: fletcher32_bpf_test.c interpreter.c
 	$(CC) -o $@ $(OFLAGS) $^
+	
+coq: interpreter.c
+	$(CLIGHTGEN) $^
