--- a/Makefile.config
+++ b/Makefile.config
@@ -1,4 +1,5 @@
-COQDEVDIR := /Users/syuan/.opam/4.11.1/lib/coq//user-contrib/dx
+COQDEVDIR := /home/shyuan/.opam/4.11.1/lib/coq//user-contrib/dx
 CPRINTERDIR := 
-COMPCERTSRCDIR := /Users/syuan/.opam/4.11.1/.opam-switch/build/coq-compcert.3.9
-INSTALLCOMPCERTCPRINTER := 
+COMPCERTSRCDIR := /home/shyuan/.opam/4.11.1/.opam-switch/build/coq-compcert.3.9
+INSTALLCOMPCERTCPRINTER := true
+DXDIR := /home/shyuan/GitLab/dx
