--- a/Makefile.config
+++ b/Makefile.config
@@ -1,5 +1,3 @@
-COQDEVDIR := /home/shyuan/.opam/4.11.1/lib/coq//user-contrib/dx
-CPRINTERDIR := 
-COMPCERTSRCDIR := /home/shyuan/.opam/4.11.1/.opam-switch/build/coq-compcert.3.9
-INSTALLCOMPCERTCPRINTER := true
-DXDIR := /home/shyuan/GitLab/dx
+OPAMPREFIX := /home/fbesson/.opam/bpf
+DXDIR := $(OPAMPREFIX)/lib/coq/user-contrib/dx
+COMPCERTSRCDIR := $(OPAMPREFIX)/.opam-switch/build/coq-compcert.3.9
