modifying the file structure of rbpf and adding 32 info as well as some proof

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,3 +1,3 @@
-OPAMPREFIX := /home/fbesson/.opam/bpf
+OPAMPREFIX := /home/shyuan/.opam/4.11.1
 DXDIR := $(OPAMPREFIX)/lib/coq/user-contrib/dx
-COMPCERTSRCDIR := $(OPAMPREFIX)/.opam-switch/build/coq-compcert.3.9
+COMPCERTSRCDIR := $(OPAMPREFIX)/.opam-switch/build/coq-compcert-32.3.9
