--- a/verifier/Makefile
+++ b/verifier/Makefile
@@ -23,9 +23,25 @@ verifier-all:
 
 verifier-extract:
 	@echo $@
-	$(OCAMLOPT) -args $(DXDIR)/cprinter-inc-args -I dxmodel dxmodel/verifier_TestMain.mli	
-	$(OCAMLOPT) -args $(DXDIR)/cprinter-inc-args -I dxmodel -c dxmodel/verifier_TestMain.ml
-	$(OCAMLOPT) -args $(DXDIR)/cprinter-inc-args -args $(DXDIR)/cprinter-link-args dxmodel/verifier_TestMain.cmx -o dxmodel/main
+	$(COMPCERTSRCDIR)/tools/modorder $(COMPCERTSRCDIR)/.depend.extr cfrontend/PrintCsyntax.cmx | \
+	    $(AWK) '{ delete paths ;                                                                 \
+	              for(i = 1; i <= NF; i++) {                                                     \
+	                 x = $$i ;                                                                   \
+	                 sub("/[^/]*$$", "", x) ;                                                    \
+	                 paths[x] = 1 ;                                                              \
+	              }                                                                              \
+	              for(p in paths) {                                                              \
+	                 print "-I" ;                                                                \
+	                 print "$(COMPCERTSRCDIR)/" p ;                                              \
+	              }                                                                              \
+	            }' > compcertsrc-I	
+	$(COMPCERTSRCDIR)/tools/modorder $(COMPCERTSRCDIR)/.depend.extr cfrontend/PrintCsyntax.cmx | \
+	    $(AWK) 'BEGIN { RS=" " } /cmx/ { gsub(".*/","") ; print }' > compcertcprinter-cmx-args
+	$(OCAMLOPT) -args compcertsrc-I -I $(DXDIR)/extr -I $(DXDIR)/src -I dxmodel dxmodel/verifier_TestMain.mli	
+	$(OCAMLOPT) -args compcertsrc-I -I $(DXDIR)/extr -I $(DXDIR)/src -I dxmodel -c dxmodel/verifier_TestMain.ml
+	$(OCAMLOPT) -args compcertsrc-I -a -args compcertcprinter-cmx-args -o compcertcprinter.cmxa
+	$(OCAMLOPT) -args compcertsrc-I -a -args compcertcprinter-cmx-args -o compcertcprinter.a
+	$(OCAMLOPT) -args compcertsrc-I str.cmxa unix.cmxa compcertcprinter.cmxa $(DXDIR)/extr/ResultMonad.cmx $(DXDIR)/extr/DXModule.cmx $(DXDIR)/extr/DumpAsC.cmx dxmodel/verifier_TestMain.cmx -o dxmodel/main
 	ln -sf $(COMPCERTSRCDIR)/compcert.ini dxmodel/compcert.ini
 	cd dxmodel && ./main
 
